--- a/seeder/1000-ha-proxy/etc/haproxy/haproxy.cfg
+++ b/seeder/1000-ha-proxy/etc/haproxy/haproxy.cfg
@@ -1,23 +1,25 @@
 global
-    log /dev/log local0
-    log /dev/log local1 notice
+    log stdout format raw local0
     daemon
-    user haproxy
-    group haproxy
-    maxconn 1024
+    maxconn 2048
 
 defaults
     log     global
-    mode    http
-    option  httplog
-    option  dontlognull
+    mode    tcp
+    option  tcplog
     timeout connect 5s
     timeout client  30s
     timeout server  30s
 
-frontend healthcheck
-    bind 127.0.0.1:8080
-    default_backend dummy_backend
+frontend k8s_api
+    bind *:6443
+    mode tcp
+    default_backend k8s_api_backend
 
-backend dummy_backend
-    http-request return status 200 content-type "text/plain" string "OK\n"
+backend k8s_api_backend
+    mode tcp
+    balance roundrobin
+    option tcp-check
+    # TCP passthrough pur, sans SSL check
+    server master1 192.168.3.80:6443 check
+    server master2 192.168.3.81:6443 check
