--- a/seeder/traefik/whoami.yaml
+++ b/seeder/traefik/whoami.yaml
@@ -7,7 +7,8 @@ spec:
   selector:
     app: whoami
   ports:
-    - port: 80
+    - name: http
+      port: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -39,7 +40,7 @@ spec:
     - web
     - websecure
   routes:
-    - match: Host(`whoami.caminade.fr`)
+    - match: Host(`whoami.kubexperience.eu`)
       kind: Rule
       services:
         - name: whoami
