--- a/seeder/traefik/whoami.yaml
+++ b/seeder/traefik/whoami.yaml
@@ -30,18 +30,20 @@ spec:
           ports:
             - containerPort: 80
 ---
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: HTTPRoute
 metadata:
   name: whoami
   namespace: default
 spec:
-  entryPoints:
-    - web
-    - websecure
-  routes:
-    - match: Host(`whoami.kubexperience.eu`)
-      kind: Rule
-      services:
+  parentRefs:
+    - name: traefik-gateway   # doit correspondre au nom de ton Gateway
+      namespace: ingress-system
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /
+      backendRefs:
         - name: whoami
           port: 80
