feat adding etcd appliance for rolling replacement of k8s masters

--- a/seeder/traefik/whoami.yaml
+++ b/seeder/traefik/whoami.yaml
@@ -40,7 +40,7 @@ spec:
     - name: traefik-gateway   # doit correspondre au nom de ton Gateway
       namespace: ingress-system
   hostnames:
-    - "whoami.kubexperience.eu"
+    - "whoami.caminade.fr"
   rules:
     - matches:
         - path:
