feat: adding full automated etcd clusteriing + full automated k8s cluster deployment

--- a/seeder/1001-noble/setup/join-template.yaml
+++ b/seeder/1001-noble/setup/join-template.yaml
@@ -12,7 +12,7 @@ nodeRegistration:
   imagePullPolicy: IfNotPresent
   imagePullSerial: true
   name: ${TPL_HOSTNAME}
-  taints: null
+${TPL_TAINTS}
 timeouts:
   controlPlaneComponentHealthCheck: 4m0s
   discovery: 5m0s
