--- a/seeder/1002-etcd/setup/etcd.conf
+++ b/seeder/1002-etcd/setup/etcd.conf
@@ -1,18 +1,18 @@
-# /root/setup/etcd.conf - template etcd first boot
 ETCD_NAME="default"
 ETCD_DATA_DIR="/var/lib/etcd"
 
-# PLACEHOLDER_IP sera remplacée par le script first-boot
-ETCD_LISTEN_CLIENT_URLS="https://PLACEHOLDER_IP:2379"
-ETCD_ADVERTISE_CLIENT_URLS="https://PLACEHOLDER_IP:2379"
+ETCD_LISTEN_CLIENT_URLS="https://127.0.0.1:2379"
+ETCD_ADVERTISE_CLIENT_URLS="https://127.0.0.1:2379"
 
-ETCD_LISTEN_PEER_URLS="http://127.0.0.1:2380"
-ETCD_INITIAL_ADVERTISE_PEER_URLS="http://127.0.0.1:2380"
-ETCD_INITIAL_CLUSTER="default=http://127.0.0.1:2380"
+ETCD_LISTEN_PEER_URLS="https://127.0.0.1:2380"
+ETCD_INITIAL_ADVERTISE_PEER_URLS="https://127.0.0.1:2380"
+ETCD_INITIAL_CLUSTER="default=https://127.0.0.1:2380"
 ETCD_INITIAL_CLUSTER_STATE="new"
 
-# TLS / PKI
 ETCD_CERT_FILE="/etc/etcd/pki/server.crt"
 ETCD_KEY_FILE="/etc/etcd/pki/server.key"
 ETCD_TRUSTED_CA_FILE="/etc/etcd/pki/ca.crt"
 ETCD_CLIENT_CERT_AUTH=true
+ETCD_PEER_CERT_FILE="/etc/etcd/pki/server.crt"
+ETCD_PEER_KEY_FILE="/etc/etcd/pki/server.key"
+ETCD_PEER_TRUSTED_CA_FILE="/etc/etcd/pki/ca.crt"
